--- a/index.html
+++ b/index.html
@@ -67,12 +67,16 @@
                 />
               </div>
               <div class="modal-footer">
-              <button type="submit" class="btn btn-save" id="btn-save-profile">
-                <svg class="btn-icon">
-                  <use xlink:href="./img/icons.svg#ok"></use>
-                </svg>
-              </button>
-            </div>
+                <button
+                  type="submit"
+                  class="btn btn-save"
+                  id="btn-save-profile"
+                >
+                  <svg class="btn-icon">
+                    <use xlink:href="./img/icons.svg#ok"></use>
+                  </svg>
+                </button>
+              </div>
             </form>
           </div>
         </div>
